# jung-portfolio

./: .gitignore  Dockerfile  Dockerfile.deployment  Dockerfile.tictactoe  README.md  deploy.sh  docker-compose.common-services.yaml  docker-compose.yaml  download  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: api.py
experiments/: main.py  main2.py  main3.py
photobooth/: accelerate_config.py  inference.py  requirements.txt  train.py  train.sh
portfolio/: index.html  package-lock.json  package.json  vite.config.ts
portfolio/src/: App.vue
portfolio/src/assets/: base.css  main.css
portfolio/src/components/: Ask.vue  Bubble.vue  Discussion.vue  Game.vue  RandomNinja.vue  ResumeView.vue
portfolio/src/model/: bert_tokenizer.ts  question_and_answer.ts  resume.ts  tools.ts
portfolio/src/router/: index.ts
portfolio/src/views/: DiscussionView.vue  GameView.vue  PhotoboothView.vue  ResumeView.vue
src/: App.vue  main.js
src/components/: Blank.vue  Home.vue  IEWarning.vue
src/components/Home/Carousel/: Carousel.vue  CarouselWithButtons.vue
src/components/Home/FlipCard/: FlipCard.vue  ManyFlipCards.vue
src/router/: index.js
tictactoe/: game.project  manifest.private.der  manifest.public.der
tictactoe/main/assets/: computer.go  human.go  ptsans.font  ptsans_copy.font
tictactoe/main/gui/: menu.gui
tictactoe/main/over/: over.gui
