[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Peter Jung <peter@jung.ninja>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.26.1"
torch = "^1.13.1"
onnxruntime = "^1.14.0"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
